Se adecua código, de acuerdo a especificaciones de sonar
Se aplican buenas practicas de al código y se retiran lineas reiterativas